		object rather than by index, which was our Slow and Non-Clever but Safe way
		in the first place.  Gah.
	Added SparseField2D
	Modified SpatialNetwork2D to use SparseField2D
	Updated Schedule documentation regarding intervals in repeated schedules.  Thanks to
		Paul Wiegand <wiegand@ist.ucf.edu>
	Tweaks to the Console delay slider to make it more sensitive
	Added PacMan
	Documentation fixes to CircledPortrayal2D
	Added an option to Console.java to allow confirmation for stopping
	Fixed minor bug in pressStop(): if you pressed stop while stopped, and repeat
		when stopped was turned on, we'd start playing immediately.
	Added a check that button 1 was the one being clicked for selecting and inspecting
		in Display2D.  Makes it easier to use other buttons.
	Modified when Display.sceneGraphCreated() is called: it's now called prior to
		the root being added to the universe.  This is necessary because Java3D
		won't allow additions to the scene graph after it's been hooked to the
		universe even if the renderer hasn't started up yet.
	Major modification to ContinuousPortrayal2D, SparsePortrayal2D, HexaSparsePortrayal2D,
		and NetworkPortrayal2D -- all portrayals which can portray elements at negative
		locations.  In many places we were pulling real values down to integers for 
		purposes of discretization.  When we discretized to negative values, this 
		would fail.  So for those Field Portrayals which can deal with negative 
		field locations, we've changed discretization by (int)(... to 
		(int)Math.floor(... to guarantee that the movement is always downwards.
		This enables (among other things) objects to be selected and inspected when
		they're located in certain negative regions.  Irritating that this bug 
		wasn't caught earlier...
	Fix to PacMan: ghosts who were frightened precisely when the game changed to a new
		screen stayed frightened (and in their box) indefinitely.  A rare occurrance
		but a weird one.