@@ -92,6 +92,21 @@ public class ContinuousPortrayal2D extends FieldPortrayal2D
         return new Point2D.Double(newinfo.draw.x, newinfo.draw.y);
         }
 
+	// values to multiply width or height by to add to a location to shift for toroidal drawing
+	static final int[] toroidalX = new int[] { 0, 1, -1, 0, 1, -1, 0, 1, -1 };
+	static final int[] toroidalY = new int[] { 0, 0, 0, 1, 1, 1, -1, -1, -1 };
+
+	boolean displayingToroidally = false;
+	
+	/** Set this to TRUE to cause the portrayal to display objects multiply (in a toroidal fashion)
+		if they overlap on the edges of the field.  Note that this incurs a slight constant overhead.
+		By default this setting is FALSE. */
+	public void setDisplayingToroidally(boolean val) { displayingToroidally = val; }
+
+	/** Returns TRUE if the portrayal is displaying objects multiply (in a toroidal fashion)
+		if they overlap on the edges of the field. */
+	public boolean isDisplayingToroidally() { return displayingToroidally; }
+	
     protected void hitOrDraw(Graphics2D graphics, DrawInfo2D info, Bag putInHere)
         {
         final Continuous2D field = (Continuous2D)this.field;
@@ -120,47 +135,63 @@ public class ContinuousPortrayal2D extends FieldPortrayal2D
         final double discretizationOverlap = field.discretization;
         for(int x=0;x<objects.numObjs;x++)
             {
-            Double2D loc = field.getObjectLocation(objects.objs[x]);
-
-            // here we only hit/draw the object if it's within our range.  However objects
-            // might leak over to other places, so I dunno...  I give them the benefit
-            // of the doubt that they might be three times the size they oughta be, hence the -2 and +2's
+			Object object = (objects.objs[x]);
+            Double2D objectLoc = field.getObjectLocation(object);
 			
-            if (loc.x >= startx - discretizationOverlap && loc.x < endx + discretizationOverlap &&
-                loc.y >= starty - discretizationOverlap && loc.y < endy + discretizationOverlap)
-                {
-                Portrayal p = getPortrayalForObject(objects.objs[x]);
-                if (!(p instanceof SimplePortrayal2D))
-                    throw new RuntimeException("Unexpected Portrayal " + p + " for object " + 
-                        objects.objs[x] + " -- expected a SimplePortrayal2D");
-                SimplePortrayal2D portrayal = (SimplePortrayal2D) p;
-                
-                newinfo.draw.x = (info.draw.x + (xScale) * loc.x);
-                newinfo.draw.y = (info.draw.y + (yScale) * loc.y);
+			if (displayingToroidally)
+				objectLoc = new Double2D(field.tx(objectLoc.x), field.tx(objectLoc.y));
+						
+			for(int i = 0; i < toroidalX.length; i++) 
+				{
+				Double2D loc = null;
+				if (i == 0)
+					loc = objectLoc;
+				else if (displayingToroidally)  // and i > 0
+					loc = new Double2D(objectLoc.x + field.width * toroidalX[i],
+									   objectLoc.y + field.height * toroidalY[i]);
+				else
+					break; // no toroidal function
+				
+				// here we only hit/draw the object if it's within our range.  However objects
+				// might leak over to other places, so I dunno...  I give them the benefit
+				// of the doubt that they might be three times the size they oughta be, hence the -2 and +2's
+				
+				if (loc.x >= startx - discretizationOverlap && loc.x < endx + discretizationOverlap &&
+					loc.y >= starty - discretizationOverlap && loc.y < endy + discretizationOverlap)
+					{
+					Portrayal p = getPortrayalForObject(object);
+					if (!(p instanceof SimplePortrayal2D))
+						throw new RuntimeException("Unexpected Portrayal " + p + " for object " + 
+							objects.objs[x] + " -- expected a SimplePortrayal2D");
+					SimplePortrayal2D portrayal = (SimplePortrayal2D) p;
+					
+					newinfo.draw.x = (info.draw.x + (xScale) * loc.x);
+					newinfo.draw.y = (info.draw.y + (yScale) * loc.y);
 
-                newinfo.location = loc;
+					newinfo.location = loc;
 
-                final Object portrayedObject = objects.objs[x];
-                if (graphics == null)
-                    {
-                    if (portrayal.hitObject(portrayedObject, newinfo))
-                        putInHere.add(getWrapper(portrayedObject));
-                    }
-                else
-                    {
-                    // MacOS X 10.3 Panther has a bug which resets the clip, YUCK
-                    //                    graphics.setClip(clip);
-                    if (objectSelected &&  // there's something there
-                        selectedWrappers.get(portrayedObject) != null)
-                        {
-                        LocationWrapper wrapper = (LocationWrapper)(selectedWrappers.get(portrayedObject));
-                        portrayal.setSelected(wrapper,true);
-                        portrayal.draw(portrayedObject, graphics, newinfo);
-                        portrayal.setSelected(wrapper,false);
-                        }
-                    else portrayal.draw(portrayedObject, graphics, newinfo);
-                    }
-                }
+					final Object portrayedObject = object;
+					if (graphics == null)
+						{
+						if (portrayal.hitObject(portrayedObject, newinfo))
+							putInHere.add(getWrapper(portrayedObject));
+						}
+					else
+						{
+						// MacOS X 10.3 Panther has a bug which resets the clip, YUCK
+						//                    graphics.setClip(clip);
+						if (objectSelected &&  // there's something there
+							selectedWrappers.get(portrayedObject) != null)
+							{
+							LocationWrapper wrapper = (LocationWrapper)(selectedWrappers.get(portrayedObject));
+							portrayal.setSelected(wrapper,true);
+							portrayal.draw(portrayedObject, graphics, newinfo);
+							portrayal.setSelected(wrapper,false);
+							}
+						else portrayal.draw(portrayedObject, graphics, newinfo);
+						}
+					}
+				}
             }
         }
 
